--- a/DesktopClient/DesktopClient.csproj
+++ b/DesktopClient/DesktopClient.csproj
@@ -8,7 +8,6 @@
 	<BuiltInComInteropSupport>true</BuiltInComInteropSupport>
   </PropertyGroup>
   <ItemGroup>
-    <Folder Include="CustomControls\" />
     <AvaloniaResource Include="Assets\**" />
     <None Remove=".gitignore" />
   </ItemGroup>
@@ -25,7 +24,8 @@
 	<PackageReference Include="Avalonia.Desktop" Version="0.10.12" />
 	<PackageReference Include="Avalonia.Diagnostics" Version="0.10.12" />
 	<PackageReference Include="Avalonia.ReactiveUI" Version="0.10.12" />
-	<PackageReference Include="XamlNameReferenceGenerator" Version="1.3.4" />
+	<PackageReference Include="Projektanker.Icons.Avalonia" Version="4.2.1" />
+	<PackageReference Include="Projektanker.Icons.Avalonia.FontAwesome" Version="4.2.1" />
   </ItemGroup>
   <ItemGroup>
     <AvaloniaXaml Update="Styles\NotificationCard.axaml">
