--- a/DesktopClient/DesktopClient.csproj
+++ b/DesktopClient/DesktopClient.csproj
@@ -20,10 +20,11 @@
   </ItemGroup>
   <ItemGroup>
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
-	<PackageReference Include="Avalonia" Version="0.10.12" />
-	<PackageReference Include="Avalonia.Desktop" Version="0.10.12" />
-	<PackageReference Include="Avalonia.Diagnostics" Version="0.10.12" />
-	<PackageReference Include="Avalonia.ReactiveUI" Version="0.10.12" />
+	<PackageReference Include="Avalonia" Version="0.10.13" />
+	<PackageReference Include="Avalonia.Desktop" Version="0.10.13" />
+	<PackageReference Include="Avalonia.Diagnostics" Version="0.10.13" />
+	<PackageReference Include="Avalonia.ReactiveUI" Version="0.10.13" />
+	<PackageReference Include="Deadpikle.AvaloniaProgressRing" Version="0.9.7" />
 	<PackageReference Include="Projektanker.Icons.Avalonia" Version="4.2.1" />
 	<PackageReference Include="Projektanker.Icons.Avalonia.FontAwesome" Version="4.2.1" />
   </ItemGroup>
