--- a/DesktopClient/DesktopClient.csproj
+++ b/DesktopClient/DesktopClient.csproj
@@ -20,6 +20,8 @@
   </ItemGroup>
   <ItemGroup>
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
+	<PackageReference Include="Aura.UI" Version="0.1.4.2" />
+	<PackageReference Include="Aura.UI.FluentTheme" Version="0.1.4.2" />
 	<PackageReference Include="Avalonia" Version="0.10.13" />
 	<PackageReference Include="Avalonia.Desktop" Version="0.10.13" />
 	<PackageReference Include="Avalonia.Diagnostics" Version="0.10.13" />
@@ -32,5 +34,16 @@
     <AvaloniaXaml Update="Styles\NotificationCard.axaml">
       <Generator>MSBuild:Compile</Generator>
     </AvaloniaXaml>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Update="Views\EnterCodeView.axaml.cs">
+      <DependentUpon>EnterCodeView.axaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\LoginFormView.axaml.cs">
+      <DependentUpon>LoginFormView.axaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\StepManagerView.axaml.cs">
+      <DependentUpon>StepManagerView.axaml</DependentUpon>
+    </Compile>
   </ItemGroup>
 </Project>
