--- a/DesktopClient/DesktopClient.csproj
+++ b/DesktopClient/DesktopClient.csproj
@@ -20,6 +20,7 @@
     <AvaloniaResource Include="Assets\**" />
     <AvaloniaResource Remove="Assets\WaitingDog.gif" />
     <None Remove=".gitignore" />
+    <None Remove="Assets\FaceArea.png" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Assets\WaitingDog.gif" />
