feat! : add Question conversion from json for types 1, 2, 3, 4 and 5

--- a/DesktopClient/DesktopClient.csproj
+++ b/DesktopClient/DesktopClient.csproj
@@ -21,6 +21,9 @@
     <AvaloniaResource Remove="Assets\WaitingDog.gif" />
     <None Remove=".gitignore" />
     <None Remove="Assets\FaceArea.png" />
+    <None Update="Models\ExperimentalData\Question.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Assets\WaitingDog.gif" />
