feat: add internet connection monitoring in the exam room

--- a/DesktopClient/DesktopClient.csproj
+++ b/DesktopClient/DesktopClient.csproj
@@ -15,7 +15,7 @@
 	<TrimMode>copyused</TrimMode>
 	<BuiltInComInteropSupport>true</BuiltInComInteropSupport>
 	<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-	<ApplicationManifest>app.manifest</ApplicationManifest>
+	<ApplicationManifest></ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
     <AvaloniaResource Include="Assets\**" />
