--- a/.gitattributes
+++ b/.gitattributes
@@ -61,4 +61,4 @@
 #*.PDF   diff=astextplain
 #*.rtf   diff=astextplain
 #*.RTF   diff=astextplain
-Assets/* linguist-vendored
+*.html linguist-vendored
